<?xml version="1.0"?>
<package format="3">
  <name>pcl_proc</name>
  <version>0.1.0</version>
  <description>The pcl_proc package</description>

  <maintainer email="tony.jacob@uri.edu">Tony Jacob</maintainer>
  <license>BSD</license> 
  <!-- Build tool for ROS 2 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  
  <!-- Export section -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>