<?xml version="1.0"?>
<package format="3">
  <name>pcl_proc</name>
  <version>0.1.0</version>
  <description>The pcl_proc package</description>

  <maintainer email="tony.jacob@uri.edu">Tony Jacob</maintainer>
  <license>BSD</license> 
  <!-- Build tool for ROS 2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>mvp_msgs</build_depend>

  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>mvp_msgs</build_export_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>mvp_msgs</exec_depend>
  <!-- Export section -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>